--- a/rgb.html
+++ b/rgb.html
@@ -15,27 +15,20 @@
     </style>
 </head>
 <body>
-        <h1>Adivina el Color</h1>
-        <p>Selecciona el color que crees que coincide con el valor RGB:</p>
-        <div id="rgb"></div>
-        <div id="mensaje"></div>
-        <div id="colores">
-            <div class="huecos"></div>
-            <div class="huecos"></div>
-            <div class="huecos"></div>
-            <div class="huecos"></div>
-            <div class="huecos"></div>
-            <div class="huecos"></div>
-        </div>
-        <button id="reset-boton">Reiniciar</button>
-    <!-- <h1>Adivina el Color</h1>
-    <p>Selecciona el color que crees que coincide con el valor RGB:</p>
-    <div id="rgb"></div>
+    <h1>Adivina el Color RGB</h1>
+    <div id="rgb">RGB</div>
     <div id="mensaje"></div>
-    <div id="colores"></div>
-    <button id="reset-boton">Reiniciar</button> -->
-    
+    <button id="reset-boton">Jugar de Nuevo</button>
+    <button id="facil-boton">Dificultad Fácil</button>
+    <button id="dificil-boton">Dificultad Difícil</button>
+    <div id="colores" class="contenedor-colores">
+      <div class="huecos"></div>
+      <div class="huecos"></div>
+      <div class="huecos"></div>
+      <div class="huecos"></div>
+      <div class="huecos"></div>
+      <div class="huecos"></div>
+    </div>
     <script src="rgb.js"></script>
-
 </body>
 </html>
