--- a/rgb.html
+++ b/rgb.html
@@ -4,23 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-         .huecos {
-            width: 100px;
-            height: 100px;
-            display: inline-block;
-            margin: 10px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Adivina el Color RGB</h1>
     <div id="rgb">RGB</div>
     <div id="mensaje"></div>
     <button id="reset-boton">Jugar de Nuevo</button>
-    <button id="facil-boton">Dificultad Fácil</button>
-    <button id="dificil-boton">Dificultad Difícil</button>
+    <button id="facil-boton">Facil</button>
+    <button id="dificil-boton">Dificil</button>
     <div id="colores" class="contenedor-colores">
       <div class="huecos"></div>
       <div class="huecos"></div>
